# Corten-JavascriptRuntime

./: .gitignore  Cargo.toml  javascript-runtime-specification-V2.md  orchestration-resume-context.json
components/async_runtime/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/async_runtime/src/: event_loop.rs  lib.rs  module.rs  promise.rs  task_queue.rs
components/benchmarks/: Cargo.toml  README.md
components/benchmarks/src/: lib.rs  micro.rs  runner.rs  sunspider.rs
components/benchmarks/suites/sunspider/: 3d-cube.js  access-binary-trees.js  math-fibonacci.js
components/builtins/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/builtins/src/: array.rs  async_generator.rs  bigint.rs  collections.rs  console.rs  date.rs  error.rs  intl.rs  iterator.rs  json.rs  lib.rs  math.rs  number.rs  object.rs  proxy.rs  reflect.rs  regexp.rs  string.rs  symbol.rs  test262.rs  typed_arrays.rs  value.rs  weakref.rs
components/builtins/tests/: contract_tests.rs
components/bytecode_system/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/bytecode_system/src/: chunk.rs  instruction.rs  lib.rs  opcode.rs  optimizer.rs  value.rs
components/core_types/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/core_types/src/: error.rs  lib.rs  profile.rs  source.rs  value.rs
components/core_types/tests/: contracts_tests.rs  unit_tests.rs
components/interpreter/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/interpreter/src/: call_frame.rs  context.rs  dispatch.rs  gc_integration.rs  inline_cache.rs  lib.rs  profile.rs  promise_integration.rs  upvalue.rs  vm.rs
components/interpreter/tests/: array_this_new_tests.rs  async_tests.rs  exception_handling_tests.rs  function_call_tests.rs
components/interpreter/tests/contracts/: mod.rs
components/interpreter/tests/integration/: mod.rs
components/interpreter/tests/unit/: mod.rs
components/jit_compiler/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/jit_compiler/src/: baseline.rs  codegen.rs  compiled_code.rs  cranelift_backend.rs  deopt.rs  inlining.rs  ir.rs  lib.rs  optimizing.rs  osr.rs  type_specialization.rs
components/jit_compiler/tests/: contract_tests.rs
components/js_cli/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/js_cli/docs/: EXECUTION_PIPELINE_STATUS.md
components/js_cli/src/: cli.rs  error.rs  lib.rs  main.rs  repl.rs  runtime.rs
components/js_cli/tests/: cli_tests.rs  contract_tests.rs  execution_tests.rs  integration_tests.rs
components/memory_manager/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/memory_manager/src/: barriers.rs  concurrent_gc.rs  gc.rs  heap.rs  hidden_class.rs  lib.rs  object.rs  write_barrier.rs
components/memory_manager/tests/: contract_tests.rs
components/parser/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/parser/src/: ast.rs  bytecode_gen.rs  error.rs  lexer.rs  lib.rs  parser.rs  scope.rs
components/parser/tests/: closure_upvalue_tests.rs  contract_api.rs
components/test262_harness/: CLAUDE.md  Cargo.toml  README.md
components/test262_harness/src/: harness.rs  lib.rs  report.rs  test_file.rs
components/test262_harness/tests/: integration.rs  unit.rs
components/test262_harness/tests/integration/: test_execution.rs
components/test262_harness/tests/unit/: harness_tests.rs  report_builder_tests.rs  report_tests.rs  test_file_tests.rs
components/web_platform/: CLAUDE.md  Cargo.toml  README.md
components/web_platform/src/: csp.rs  devtools.rs  lib.rs  same_origin.rs  service_worker.rs  source_maps.rs  structured_clone.rs  wasm.rs  workers.rs
components/web_platform/tests/unit/: mod.rs
contracts/: async_runtime.yaml  builtins.yaml  bytecode_system.yaml  core_types.yaml  interpreter.yaml  jit_compiler.yaml  js_cli.yaml  memory_manager.yaml  parser.yaml
docs/: BENCHMARKS.md  COMPLETION-REPORT.md  ENGINE-STATUS.md  ORCHESTRATION-PROGRESS.md  TEST262-COMPLIANCE.md
orchestration/: INSTALLATION_MANIFEST.json  INSTALLED_AT  MIGRATION_LOG.json  adaptive_orchestrator.py  auto_init.py  completion_verifier.py  defensive_pattern_checker.py  deployment_verifier.py  orchestration-config.json  orchestration_with_checkpoints.py  package_generator.py  project-metadata.json  requirement_annotator.py  requirements_tracker.py  resume_orchestration.py  run_tests_simple.py  self_check.py  session_init.py  specification_analyzer.py  structure_analyzer.py  stub_detector.py  system_validator.py  templates.py  test_anti_stopping.py  test_completion_verifier.py  test_contract_enforcer.py  test_contract_generator.py  test_defensive_patterns.py  test_integration_predictor.py  test_progress_preserver.py  test_quality_checker.py  test_requirement_annotator.py  test_requirements_tracker.py  test_semantic_verifier.py  test_specification_analyzer.py  test_system_validator.py  test_test_quality_checker.py  version_manager.py
orchestration/data/: installation_manifest.json  migration_log.json
orchestration/hooks/: post_checkout_enforcement.py  post_commit_enforcement.py  pre_commit_completion_blocker.py  pre_commit_enforcement.py  pre_push_enforcement.py
orchestration/monitoring/: __init__.py  monitor.py  stall_detector.py
orchestration/notification/: __init__.py
orchestration/phase_gates/: completion_gate.py
orchestration/setup/: README.md  install_enforcement.py  verify_installation.py
orchestration/task_queue/: auto_sync.py  queue.py
orchestration/tasks/: queue_state.json
orchestration/verification/: rationalization_detector.py  spec_coverage_checker.py  spec_v2_checker.py  verification_agent.py
scripts/: run-test262.sh
tests/: TEST-RESULTS.md
tests/integration/rust/: Cargo.toml
tests/integration/rust/src/: lib.rs
tests/integration/rust/tests/: bytecode_interpreter.rs  e2e_cli.rs  end_to_end_tests.rs  full_pipeline.rs  memory_interpreter.rs  parser_bytecode.rs
(+40 files in other folders)
