[workspace]
resolver = "2"
members = [
    "components/core_types",
    "components/memory_manager",
    "components/bytecode_system",
    "components/parser",
    "components/interpreter",
    "components/builtins",
    "components/async_runtime",
    "components/jit_compiler",
    "components/js_cli",
    "tests/integration/rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Corten Team"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across components
parking_lot = "0.12"
crossbeam = "0.8"
num-bigint = "0.4"
regex = "1.10"
ryu = "1.0"
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
cranelift = "0.101"
cranelift-codegen = "0.101"
thiserror = "1.0"
