[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true

[lib]
name = "benchmarks"
path = "src/lib.rs"

[[bin]]
name = "corten-bench"
path = "src/bin/bench.rs"

[dependencies]
# Core components
js_cli = { path = "../js_cli" }
core_types = { path = "../core_types" }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
