[package]
name = "interpreter"
version.workspace = true
edition.workspace = true

[dependencies]
bytecode_system = { path = "../bytecode_system" }
memory_manager = { path = "../memory_manager" }
core_types = { path = "../core_types" }
builtins = { path = "../builtins" }
async_runtime = { path = "../async_runtime" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
parking_lot = "0.12"
arrayvec = "0.7"

[dev-dependencies]

[[test]]
name = "unit_tests"
path = "tests/unit/mod.rs"

[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"

[[test]]
name = "contract_tests"
path = "tests/contracts/mod.rs"
