[package]
name = "web_platform"
version = "0.1.0"
edition = "2021"

[dependencies]
builtins = { path = "../builtins" }
interpreter = { path = "../interpreter" }
async_runtime = { path = "../async_runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]

[[test]]
name = "unit_tests"
path = "tests/unit/mod.rs"
